# rassdb

./: .gitignore  CONTEXT.md  LICENSE  MODELS.md  README.md  download_models.py  example-rassdb-config-gguf.toml  pyproject.toml  requirements.txt  setup.py  test_gguf_integration.py
debugs/: test_cosine_fix.py  test_vector_scoring.py
docs/: conf.py  configuration.rst  index.rst
download_models/: download_all.py  download_codebert.py  download_coderank_embed.py  download_nomic_code.py  download_nomic_code_gguf.py  download_nomic_text.py  download_qodo_embed.py
embed-server/: README.md  download_model.py
example-chat-bot/: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ANTHROPIC.md  check_relevant_chunks.py  check_schema.py  debug_embedding.py  debug_embedding_full.py  final_test.py  index.html  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.js  setup.py  setup_qwen_model.sh  test_direct_search.py  test_new_model.py  test_search.py  test_updated_strategy.py
example-chat-bot/css/: style.css
example-chat-bot/docs/source/: api-reference.rst  architecture.rst  conf.py  deployment.rst  development.rst  getting-started.rst  index.rst  mcp-protocol.rst  overview.rst  troubleshooting.rst
example-chat-bot/js/: app.js
example-chat-bot/scripts/: README.md  check-ollama.sh  start-all.sh  start-backend.sh  start-frontend.sh  start-models.sh  start-python-backend.sh  stop-models.sh
example-chat-bot/src/frontend/: .env.example  package.json
example-chat-bot/src/frontend/public/: app.js  index.html  styles.css
example-chat-bot/src/frontend/src/: server.js
example-chat-bot/src/rassdb_chat/: __init__.py
example-chat-bot/src/rassdb_chat/api/: __init__.py  server.py
example-chat-bot/src/rassdb_chat/core/: __init__.py  chat_engine.py  mcp.py  mcp_cli.py  model_handler.py
example-chat-bot/src/rassdb_chat/models/: __init__.py  chat.py
rassdb/: __init__.py  cloud_embeddings.py  code_parser.py  embedding_strategies.py  gguf_embeddings.py  indexer.py  ui.py  vector_store.py
rassdb/cli/: __init__.py  get_git_diff_lines.py  index.py  search.py  stats.py
rassdb/utils/: db_discovery.py  scorer.py
tests/: __init__.py
