[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rassdb"
version = "0.1.0"
description = "Lightweight code RAG/semantic search database"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AJ Carter", email = "ajcarter@example.com"},
]
keywords = ["rag", "semantic-search", "code-search", "embeddings", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "sentence-transformers>=2.0",
    "sqlite-vec>=0.1.1",
    "tree-sitter>=0.20",
    "tree-sitter-python>=0.20",
    "tree-sitter-javascript>=0.20",
    "tree-sitter-typescript>=0.20",
    "tree-sitter-java>=0.20",
    "tree-sitter-cpp>=0.20",
    "tree-sitter-c>=0.20",
    "tree-sitter-rust>=0.20",
    "tree-sitter-go>=0.20",
    "gitignore-parser>=0.1",
    "tqdm>=4.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=6.0",
    "pydata-sphinx-theme>=0.13",
]

[project.scripts]
rassdb-search = "rassdb.cli.search:main"
rassdb-index = "rassdb.cli.index:main"
rassdb-stats = "rassdb.cli.stats:main"

[project.urls]
Homepage = "https://github.com/ajcarter/rassdb"
Documentation = "https://rassdb.readthedocs.io"
Repository = "https://github.com/ajcarter/rassdb.git"
Issues = "https://github.com/ajcarter/rassdb/issues"

[tool.setuptools]
packages = ["rassdb"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true